--- a/Examen/Views/Home/AddCity.cshtml
+++ b/Examen/Views/Home/AddCity.cshtml
@@ -3,28 +3,30 @@
 }
 @model Examen.Models.CitiesAdded
 <link href="~/Content/style.css" rel="stylesheet" />
-<div class="">
+<div class="" style="overflow-x:scroll; width:auto;white-space:nowrap;">
 	<h1>Your cities</h1>
 	@foreach (var i in Model.GetWeathers())
 	{
-		<form class="box" style="text-align:center">
-			<h2>@i.name</h2>
-			<img style="width: 260px; height: 260px" src="@Model.images[@i.name]" />
-			<h1>@i.main.temp °</h1>
-			<h3>@i.weather[0].main</h3>
-			<div class="row">
-				<div class="col" style="float:left; padding-left:70pt">
-					<h4 style="color:greenyellow"><i class="glyphicon glyphicon-chevron-down"></i></h4>
-					<h4>@i.main.temp_min</h4>
-					<label style="color:greenyellow">Min</label>
-				</div>
-				<div class="col" style="float:right; padding-right:70pt">
-					<h4 style="color:red"><i class="glyphicon glyphicon-chevron-up"></i></h4>
-					<h4>@i.main.temp_max</h4>
-					<label style="color:red">Max</label>
-				</div>
+	<form class="box" style="text-align:center; max-width:400px; display:inline-block" action="@Url.Action("ViewMore",i)" method="post">
+		<h2>@i.name</h2>
+		<h1>@i.main.temp °</h1>
+		<h3>@i.weather[0].main</h3>
+		<div class="row">
+			<div class="col" style="float:left; padding-left:70pt">
+				<h4 style="color:greenyellow"><i class="glyphicon glyphicon-chevron-down"></i></h4>
+				<h4>@i.main.temp_min</h4>
+				<label style="color:greenyellow">Min</label>
 			</div>
-		</form>
+			<div class="col" style="float:right; padding-right:70pt">
+				<h4 style="color:red"><i class="glyphicon glyphicon-chevron-up"></i></h4>
+				<h4>@i.main.temp_max</h4>
+				<label style="color:red">Max</label>
+			</div>
+		</div>
+		<div class="row	button login" style="border-radius:12px; height:auto; padding:5pt;">
+			<button style="border-radius:12px;"><span>View more</span> <i class="fa glyphicon-plus"></i></button>
+		</div>
+	</form>
 	}
 </div>
 
